scalableprojectnba-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalableprojectnba-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scalableprojectnba-frontend
  template:
    metadata:
      labels:
        app: scalableprojectnba-frontend
    spec:
      containers:
      - name: scalableprojectnba-frontend
        image: containerregistrynba.azurecr.io/scalableprojectnba-frontend
        ports:
        - containerPort: 443
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: scalableprojectnba-frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: scalableprojectnba-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalableprojectnba-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scalableprojectnba-backend
  template:
    metadata:
      labels:
        app: scalableprojectnba-backend
    spec:
      containers:
      - name: scalableprojectnba-backend
        image: containerregistrynba.azurecr.io/scalableprojectnba-backend
        ports:
        - containerPort: 443
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: scalableprojectnba-backend-service
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: scalableprojectnba-backend
